Added a background location service

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -23,6 +25,8 @@
         </activity>
 
         <receiver android:name=".DataSources.WeatherAPIinfo"
+            android:exported="true"/>
+        <receiver android:name=".DataSources.LocationLatLong"
             android:exported="true"/>
     </application>
 
