--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,7 @@ dependencies {
 
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
+    //Implements the android fitness API for either monument or calories API
+    implementation 'com.google.android.gms:play-services-fitness:21.0.1'
+    implementation 'com.google.android.gms:play-services-auth:20.1.0'
 }
