Fixed some bugs. couldnt get the step counter to work

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
             android:exported="true"/>
         <receiver android:name=".DataSources.LocationLatLong"
             android:exported="true"/>
+        <receiver android:name=".BroadcastReceiver.StepCountReceiver"
+            android:exported="true"/>
     </application>
 
 </manifest>
