--- a/notification_lib/build.gradle
+++ b/notification_lib/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'androidx.work:work-runtime-ktx:2.7.1'
+    implementation 'com.android.volley:volley:1.2.1'
 }
